<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.screens.admin.quizeditor.QuizEditorFragment">
        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            app:srcCompat="@android:drawable/ic_menu_add"
            android:text="@string/update_quiz_and_close"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/quiz_title"/>
        <EditText
            android:id="@+id/quizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:hint="@string/quiz_edit_title_hint"
            android:inputType="text"
            android:importantForAutofill="no" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/quiz_description"/>
        <EditText
            android:id="@+id/quizDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:hint="@string/quiz_edit_title_hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:importantForAutofill="no"
            android:gravity="top|left"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/quiz_questions"/>
            <Button
                android:id="@+id/addQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                app:srcCompat="@android:drawable/ic_menu_add"
                android:text="@string/add_question"/>

        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/questionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/admin_quiz_item"
                app:layoutManager="LinearLayoutManager" />

            <TextView
                android:id="@+id/emptyQuestionsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin_medium"
                android:text="@string/empty_questions"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
