<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.LinearLayoutCompat
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".presentation.screens.admin.questioneditor.QuestionEditorFragment">

        <Button
            android:id="@+id/updateQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/update_question_and_close"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/question_title" />

        <EditText
            android:id="@+id/questionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:hint="@string/quiz_edit_title_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/question_description" />

        <EditText
            android:id="@+id/questionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:gravity="top|start"
            android:hint="@string/quiz_edit_title_hint"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:lines="5" />

        <RadioGroup
            android:id="@+id/answerTypeRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer_is" />

            <RadioButton
                android:id="@+id/radio_radios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single" />

            <RadioButton
                android:id="@+id/radio_checkboxes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiple" />
        </RadioGroup>

<!--        <RadioGroup-->
<!--            android:id="@+id/internalRadioGroup"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent"-->
<!--            >-->


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium">

                <RadioButton
                    android:id="@+id/radio_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <CheckBox
                    android:id="@+id/checkbox_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/answer_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:text="Answer goes here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium">

                <RadioButton
                    android:id="@+id/radio_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkbox_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/answer_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:text="Answer goes here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium">

                <RadioButton
                    android:id="@+id/radio_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkbox_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/answer_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:text="Answer goes here" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium">

                <RadioButton
                    android:id="@+id/radio_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/checkbox_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/answer_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/answer_hint"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    tools:text="Answer goes here" />
            </LinearLayout>
<!--        </RadioGroup>-->
    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>
